# ollama-streamlit

./: .gitignore  LICENSE  README.md  only-ollama.yaml  pyproject.toml  requirements.txt  simple-chatta.yaml
docker/: Dockerfile
ollama/: README.md
ollama/samples/: chat-stream.py
src/chatta_app/: app.py  launcher.py
src/chatta_app/handler/: __init__.py  ollama.py
src/chatta_app/schema/: __init__.py  message.py  model.py
src/chatta_app/utils/: chat.py  connect.py
